--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <script>
-    window.location.href="https://penglusky.cn";
+    //window.location.href="https://penglusky.cn";
 </script>
 
 <body>
+    <div>hello</div>
 </body>
 
 </html>
